chandeliers-lus/tests/fail/ui/tc/const/call.stderr
error: Function calls are not valid in const contexts
 --> tests/fail/ui/tc/const/call.rs:2:23
  |
2 |     const X : float = float(5);
  |                       ^^^^^^^^
  |
  = note: You must put this definition inside a node
